libc++ defines __cpp_lib_unreachable

--- a/data.yaml
+++ b/data.yaml
@@ -3779,7 +3779,9 @@ library:
     papers: P0627R6
     cppreference-description: '{{lc|std::unreachable}}'
   support:
-    clang: null
+    clang:
+    - since: C++23
+      value: 202202
     gcc: null
     msvc:
     - since: C++23
