--- a/data.yaml
+++ b/data.yaml
@@ -2174,7 +2174,10 @@ library:
     cppreference-description: class template {{lc|std::expected}}
   support:
     clang: null
-    gcc: null
+    gcc:
+    - since: C++23
+      depends: __cpp_concepts >= 202002
+      value: 202202
     msvc: null
 - name: __cpp_lib_filesystem
   header_list: filesystem
@@ -3824,7 +3827,7 @@ library:
     - since: C++17
       value: 202102
     - since: C++20
-      depends: __cpp_concepts >= 202002L
+      depends: __cpp_concepts >= 202002L && __cpp_constexpr >= 201811L
       value: 202106
     msvc:
     - since: C++17
