--- a/data.yaml
+++ b/data.yaml
@@ -3175,7 +3175,9 @@ library:
       {{lc|std::reference_converts_from_temporary}}'
   support:
     clang: null
-    gcc: null
+    gcc:
+    - since: C++23
+      value: 202202
     msvc: null
 - name: __cpp_lib_remove_cvref
   header_list: type_traits
