--- a/data.yaml
+++ b/data.yaml
@@ -2049,7 +2049,10 @@ library:
   support:
     clang: null
     gcc: null
-    msvc: null
+    msvc:
+    - since: C++23
+      depends: defined(__cpp_lib_concepts)
+      value: 202202
 - name: __cpp_lib_coroutine
   header_list: coroutine
   rows:
@@ -3137,7 +3140,10 @@ library:
   support:
     clang: null
     gcc: null
-    msvc: null
+    msvc:
+    - since: C++23
+      depends: defined(__cpp_lib_concepts)
+      value: 202202
 - name: __cpp_lib_ranges_zip
   header_list: ranges tuple utility
   rows:
